Bug 106756 - Wine 3.9 crashes with DXVK on Just Cause 3 and Quantum Break on VEGA but works ON POLARIS
Summary: Wine 3.9 crashes with DXVK on Just Cause 3 and Quantum Break on VEGA but work...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-31 13:40 UTC by Giovanni ongaro
Modified: 2018-06-16 08:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
attachment-8039-0.html (4.60 KB, text/html)
2018-05-31 13:45 UTC, Bas Nieuwenhuizen
Details
log of shader (125.63 KB, text/plain)
2018-05-31 14:26 UTC, Giovanni ongaro
Details
attachment-8355-0.html (1.78 KB, text/html)
2018-06-01 17:00 UTC, Giovanni ongaro
Details
attachment-1860-0.html (1.88 KB, text/html)
2018-06-14 13:10 UTC, Giovanni ongaro
Details

Description Giovanni ongaro 2018-05-31 13:40:04 UTC
Hi hope this info is enough but both games crash on VEGA and Wine 3.9 DXVK ith following backtrace maybe a mesa bug or LLVM bug ? used mesa git from today and llvm7 from today git
BUT THEY WORK ON POLARIS



=>0 0x00007fbdbcb35d43 


_ZN4llvm10SelectInst18areInvalidOperandsEPNS_5ValueES2_S2_+0x3() in libllvmcore.so.7 (0x00007fbdac5cbd38)
  1 0x00007fbdbcab8cda LLVMBuildSelect+0xb9() in libllvmcore.so.7 (0x00007fbdac5cbd38)
  2 0x00007fbdcd924b07 ac_translate_nir_to_llvm+0x1586() in libvulkan_radeon.so (0x00007fbdac4884d0)
  3 0x00007fbdcd926135 radv_compile_nir_shader+0x34() in libvulkan_radeon.so (0x000000003461e3c0)
  4 0x00007fbdcd92f075 shader_variant_create+0x334() in libvulkan_radeon.so (0x0000000000000000)
  5 0x00007fbdcd92f44a radv_shader_variant_create+0x119() in libvulkan_radeon.so (0x000000003461e534)
  6 0x00007fbdcd928232 radv_create_shaders+0xd31() in libvulkan_radeon.so (0x00007fbdc0116220)
  7 0x00007fbdcd92af35 radv_pipeline_init.isra+0xb44() in libvulkan_radeon.so (0x000000003461f380)
  8 0x00007fbdcd92cd80 radv_graphics_pipeline_create+0x8f() in libvulkan_radeon.so (0x00007fbdc0116220)
  9 0x00007fbdcd92ce3e radv_CreateGraphicsPipelines+0x4d() in libvulkan_radeon.so (0x00007fbdc0116220)
  10 0x00007fbdcdf824f4 wine_vkCreateGraphicsPipelines+0xe3() in winevulkan (0x000000003461f170)
  11 0x000000006a415606 in d3d11 (+0xd5605) (0x000000003461f1b0)
  12 0x000000006a385bf7 in d3d11 (+0x45bf6) (0x000000003461f240)
  13 0x000000006a384caf in d3d11 (+0x44cae) (0x000000003461fa40)
Comment 1 Bas Nieuwenhuizen 2018-05-31 13:45:31 UTC
Created attachment 139889 [details]
attachment-8039-0.html

Could you try getting the shader it fails on with RADV_DEBUG=shaders?

On Thu, May 31, 2018 at 3:40 PM, <bugzilla-daemon@freedesktop.org> wrote:

> Bug ID 106756 <https://bugs.freedesktop.org/show_bug.cgi?id=106756>
> Summary Wine 3.9 crashes with DXVK on Just Cause 3 and Quantum Break on
> VEGA but works ON POLARIS
> Product Mesa
> Version git
> Hardware Other
> OS All
> Status NEW
> Severity normal
> Priority medium
> Component Drivers/Vulkan/radeon
> Assignee mesa-dev@lists.freedesktop.org
> Reporter giovanni.nicola@ticino.com
> QA Contact mesa-dev@lists.freedesktop.org
>
> Hi hope this info is enough but both games crash on VEGA and Wine 3.9 DXVK ith
> following backtrace maybe a mesa bug or LLVM bug ? used mesa git from today and
> llvm7 from today git
> BUT THEY WORK ON POLARIS
>
>
>
> =>0 0x00007fbdbcb35d43
>
>
> _ZN4llvm10SelectInst18areInvalidOperandsEPNS_5ValueES2_S2_+0x3() in
> libllvmcore.so.7 (0x00007fbdac5cbd38)
>   1 0x00007fbdbcab8cda LLVMBuildSelect+0xb9() in libllvmcore.so.7
> (0x00007fbdac5cbd38)
>   2 0x00007fbdcd924b07 ac_translate_nir_to_llvm+0x1586() in libvulkan_radeon.so
> (0x00007fbdac4884d0)
>   3 0x00007fbdcd926135 radv_compile_nir_shader+0x34() in libvulkan_radeon.so
> (0x000000003461e3c0)
>   4 0x00007fbdcd92f075 shader_variant_create+0x334() in libvulkan_radeon.so
> (0x0000000000000000)
>   5 0x00007fbdcd92f44a radv_shader_variant_create+0x119() in
> libvulkan_radeon.so (0x000000003461e534)
>   6 0x00007fbdcd928232 radv_create_shaders+0xd31() in libvulkan_radeon.so
> (0x00007fbdc0116220)
>   7 0x00007fbdcd92af35 radv_pipeline_init.isra+0xb44() in libvulkan_radeon.so
> (0x000000003461f380)
>   8 0x00007fbdcd92cd80 radv_graphics_pipeline_create+0x8f() in
> libvulkan_radeon.so (0x00007fbdc0116220)
>   9 0x00007fbdcd92ce3e radv_CreateGraphicsPipelines+0x4d() in
> libvulkan_radeon.so (0x00007fbdc0116220)
>   10 0x00007fbdcdf824f4 wine_vkCreateGraphicsPipelines+0xe3() in winevulkan
> (0x000000003461f170)
>   11 0x000000006a415606 in d3d11 (+0xd5605) (0x000000003461f1b0)
>   12 0x000000006a385bf7 in d3d11 (+0x45bf6) (0x000000003461f240)
>   13 0x000000006a384caf in d3d11 (+0x44cae) (0x000000003461fa40)
>
> ------------------------------
> You are receiving this mail because:
>
>    - You are the assignee for the bug.
>    - You are the QA Contact for the bug.
>
>
> _______________________________________________
> mesa-dev mailing list
> mesa-dev@lists.freedesktop.org
> https://lists.freedesktop.org/mailman/listinfo/mesa-dev
>
>
Comment 2 Giovanni ongaro 2018-05-31 14:26:18 UTC
Created attachment 139890 [details]
log of shader
Comment 3 Samuel Pitoiset 2018-06-01 09:15:57 UTC
Can you explain how to reproduce the crash ingame?
Comment 4 Giovanni ongaro 2018-06-01 09:58:53 UTC
How to Reproduce Crash 
Start Quantum break trough steam after the intro video the screen turns black for a while and then crashes before going ingame this on VEGA64 FC27 RYZEN 2700x if i start it with the RX480 it goes ingame without problems
Comment 5 Bas Nieuwenhuizen 2018-06-01 13:37:49 UTC
To confirm, did you build your LLVM (32-bit is needed looks like?) with:

BUILD_SHARED_LIBS=OFF
LLVM_BUILD_LLVM_DYLIB=ON
LLVM_LINK_LLVM_DYLIB=ON

?
Comment 6 Giovanni ongaro 2018-06-01 17:00:49 UTC
Created attachment 139905 [details]
attachment-8355-0.html

I did build with BUILD_SHARED_LIBS=on and 64 bits is required


Inviato da smartphone Samsung Galaxy.
-------- Messaggio originale --------Da: bugzilla-daemon@freedesktop.org Data: 01/06/18  15:37  (GMT+01:00) A: giovanni.nicola@ticino.com Oggetto: [Bug 106756] Wine 3.9 crashes with DXVK on Just Cause 3 and Quantum Break on VEGA but works ON POLARIS 

      
        
            Comment # 5
              on bug 106756
              from  Bas Nieuwenhuizen

        To confirm, did you build your LLVM (32-bit is needed looks like?) with:

BUILD_SHARED_LIBS=OFF
LLVM_BUILD_LLVM_DYLIB=ON
LLVM_LINK_LLVM_DYLIB=ON

?
        
      


      
      You are receiving this mail because:

      
          You reported the bug.
Comment 7 Samuel Pitoiset 2018-06-04 21:08:33 UTC
Did you build mesa in debug mode (ie. --enable-debug)?
Comment 8 Giovanni ongaro 2018-06-14 11:29:01 UTC
i did build mesa with debug mode but how do i activate it also i submitted the same bug to DXVK devs and they said that all the shaders are validated and is not an DXVK bug probably 
now i do not know if it is a mesa or llvm bug
→ did use wine 3.10 DXVK git mesa git llvm git from 12 juni
my system is a ryzen2700x with vega64 and FC27 and 16 GB of ram
till now i found 3 games crashing with the same bug
the long journey home
quantum break
just cause 3
i have a setup with a rx480 on my secondary pcie and tested it with the rx480 on the same system setup and all 3 games work
Comment 9 Samuel Pitoiset 2018-06-14 12:10:11 UTC
Well, the LLVM documentation [1] says:

"BUILD_SHARED_LIBS is only recommended for use by LLVM developers. If you want to build LLVM as a shared library, you should use the LLVM_BUILD_LLVM_DYLIB option."

Please, don't use that and re-build your LLVM with:

-DLLVM_BUILD_LLVM_DYLIB=ON
-DLLVM_LINK_LLVM_DYLIB=ON

(and remove BUILD_SHARED_LIBS, of course).

Let me know if it still crashes with these new flags.

[1] https://llvm.org/docs/CMake.html
Comment 10 Pavel Ondračka 2018-06-14 12:27:12 UTC
BTW regarding the debug information from winedbg. It might help to specifically build mesa (and maybe llvm) with CFLAGS="-g -gdwarf-2", since some distros (like Fedora) default to newer dwarf version which winedbg doesn't support.
Comment 11 Samuel Pitoiset 2018-06-14 12:41:04 UTC
I can reproduce the issue with https://patchwork.freedesktop.org/patch/229503/. Not sure why it doesn't crash for me... I will fix it.

Anyway, I highly recommend you to not use BUILD_SHARED_LIBS.
Comment 12 Giovanni ongaro 2018-06-14 13:10:43 UTC
Created attachment 140152 [details]
attachment-1860-0.html

I build it with dylib still crashes


Inviato da smartphone Samsung Galaxy.
-------- Messaggio originale --------Da: bugzilla-daemon@freedesktop.org Data: 14/06/18  14:41  (GMT+01:00) A: giovanni.nicola@ticino.com Oggetto: [Bug 106756] Wine 3.9 crashes with DXVK on Just Cause 3 and Quantum Break on VEGA but works ON POLARIS 

      
        
            Comment # 11
              on bug 106756
              from  Samuel Pitoiset

        I can reproduce the issue with https://patchwork.freedesktop.org/patch/229503/.
Not sure why it doesn't crash for me... I will fix it.

Anyway, I highly recommend you to not use BUILD_SHARED_LIBS.
        
      


      
      You are receiving this mail because:

      
          You reported the bug.
Comment 13 Samuel Pitoiset 2018-06-14 13:23:08 UTC
This should be fixed with https://patchwork.freedesktop.org/patch/229508/

Can you confirm? Thanks!
Comment 14 Giovanni ongaro 2018-06-14 14:44:49 UTC
thank you for the quick response
i can confirm that all 3 games now work on vega 64 under dxvk
with this patch applied
you did a very good job
Comment 15 Giovanni ongaro 2018-06-14 15:08:42 UTC
it also fixes NFS Payback


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.